<resources>

    <string name="places_api_key">AIzaSyDB2pFKcLsdIFX9MtpQKONBVJS2ibKsTYM</string>
    <string name="facebook_app_id">373309120215242</string>
    <string name="fb_login_protocol_scheme">fb373309120215242</string>

    <string name="app_name">Ads</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_exists">Email Id already exists</string>
    <string name="name">Name</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="create_an_account">Create an account ? </string>
    <string name="already_have_account">Already have an account ? </string>
    <string name="problem_with_registration">Problem with Registration, Try again</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_my_ads">My Ads</string>
    <string name="menu_post_ad">Post Ad</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="or">OR</string>
    <string name="something_went_wrong">Something went wrong. Try again later.</string>
    <string name="ad_title">Ad title</string>
</resources>
