<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_post_ad"
            android:icon="@drawable/ic_menu_post_ad"
            android:title="@string/menu_post_ad" />
        <item
            android:id="@+id/nav_my_ads"
            android:icon="@drawable/ic_menu_my_ads"
            android:title="@string/menu_my_ads" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_messages"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_menu_favourite"
            android:title="@string/menu_favourite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>


