<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asyncdroid.ads.mvp.view.activity.LoginActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/display_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_border_et"
            android:hint="@string/display_name"
            android:inputType="text"
            android:maxLength="@integer/max_length_30"
            android:maxLines="@integer/max_lines_1"
            android:padding="@dimen/dimen_15dp"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:fontFamily="@font/roboto_regular"/>

        <TextView
            android:id="@+id/display_name_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:maxLines="@integer/max_lines_1"
            android:textColor="@android:color/holo_red_dark" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:background="@drawable/grey_border_et"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/max_length_30"
            android:maxLines="@integer/max_lines_1"
            android:padding="@dimen/dimen_15dp"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:fontFamily="@font/roboto_regular"/>

        <TextView
            android:id="@+id/email_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:maxLines="@integer/max_lines_1"
            android:textColor="@android:color/holo_red_dark" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:background="@drawable/grey_border_et"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="@integer/max_length_25"
            android:maxLines="@integer/max_lines_1"
            android:padding="@dimen/dimen_15dp"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:fontFamily="@font/roboto_regular"
            android:drawableEnd="@drawable/ic_menu_password_visibility"/>

        <TextView
            android:id="@+id/password_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:maxLines="@integer/max_lines_1"
            android:textColor="@android:color/holo_red_dark" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="@dimen/dimen_180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:padding="@dimen/dimen_10dp"
            android:background="@drawable/blue_background_btn"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/dimen_18sp"
            android:fontFamily="@font/roboto_medium"/>

        <Button
            android:id="@+id/google_sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Google"/>

    </LinearLayout>


</RelativeLayout>
